/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.proto.model;

import "Types.proto";

option java_package = "com.dremio.proto.model";
option optimize_for = SPEED;

message UpdateId {
  optional common.MinorType type = 1;
  optional int32 int_update_id = 2;
  optional int64 long_update_id = 3;
  optional string string_update_id = 4;
  optional double double_update_id = 5;
  optional float float_update_id = 6;
}